[package]
name = "steam_server_disable"
version = "0.2.7"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A GUI tool to block access to Steam (CSGO/Dota) servers region-wise."
homepage = "https://github.com/ishbosamiya/steam_server_disable"
repository = "https://github.com/ishbosamiya/steam_server_disable"
keywords = ["steam", "firewall", "gui"]
publish = false

[package.metadata.wix]
upgrade-guid = "F8C1BF6D-440A-4484-ADFA-3799593169B8"
path-guid = "484D83EC-D337-4DB1-BC5D-2E9187957DD8"
license = false
eula = false

[[bin]]
name = "steam_server_disable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curl = "0.4"
# `openssl-sys`'s version depends on `curl`'s version
#
# `openssl-sys` has feature `vendored` so that it gets statically
# linked, otherwise `libssl1.1` is required which not all systems have
#
# reference: <https://github.com/cross-rs/cross/wiki/Recipes#vendored>
openssl-sys = { version = "0.9", features = ["vendored"] }
egui_glfw = { version = "0.6.1", git = "https://github.com/ishbosamiya/egui_glfw.git", branch = "v0.6.1-release" }
glfw = "0.55"
gl = "0.14"
icmp-socket = "0.2"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
directories = "4.0"
regex = "1.10"
clap = { version = "4.0", features = ["derive", "env"] }

[patch.crates-io]
glfw-sys = { git = "https://github.com/livinginthegreyzoneoutlook/glfw-sys.git" }

[target.'cfg(unix)'.dependencies]
iptables = "0.4.3"
sudo = "0.6"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"

[profile.release-with-symbols]
inherits = "release"
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true

# `linux` build dependencies
[workspace.metadata.dist.dependencies.apt]
cmake = "*"
libxrandr-dev = "*"
xorg-dev = "*"
